--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,12 @@
             "email": "flugged@gmail.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/dongdongGit/laravel-responder"
+        }
+    ],
     "require": {
         "php": "^7.0",
         "illuminate/contracts": "5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0",
