--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,7 @@
         }
     ],
     "require": {
-        "php": "^7.0",
-        "illuminate/contracts": "5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0",
-        "illuminate/support": "5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0",
-        "league/fractal": "^0.17.0"
+        "flugger/laravel-responder": "^3.1"
     },
     "require-dev": {
         "illuminate/database": "5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0",
